@@ -1,6 +1,6 @@
 ### NOTE: SETTABLE_CONFIG
-INSTALL_LOCATION ?= ../../buildroot-2016.11.1-x86_64
-KERNEL_MODULE_EVRMA ?= /afs/slac/g/lcls/package/linuxKernel_Modules/evrmaDriver/R1.0.9/buildroot-2016.11.1-x86_64
+INSTALL_LOCATION ?= ../../buildroot-2019.08-x86_64
+KERNEL_MODULE_EVRMA ?= /afs/slac/g/lcls/package/linuxKernel_Modules/evrmaDriver/R1.0.9/buildroot-2019.08-x86_64
 
 
 # ===============================================================
