@@ -1,0 +1,14 @@
+# Makefile for linuxRT:
+# Location of BuildRoot home for X86_64 architecture:
+BUILDROOT_X86_HOME=/afs/slac/package/linuxRT/buildroot-2016.11.1
+
+# Location CrossCompiler HOME for linuxRT x86_64 targets (glibc)
+XCROSS_HOME=$(BUILDROOT_X86_HOME)/host/linux-x86_64/x86_64/usr/bin/x86_64-buildroot-linux-gnu-
+
+include ../../src/lib/Makefile.common
+
+
+
+
+
+ 
