@@ -1,5 +1,9 @@
  Release Notes for the evrma package
 -------------------------------------------
+
+R1.0.9:  Feb 02, 2020, Kukhee Kim (khkim)
+         * build against evrmaDriver R1.0.9 and support buildroot-2019.08
+
 R1.0.8:  Sep 25, 2017, Kukhee Kim (khkim)
          * build against evrmaDriver R1.0.8
 
